Intellij static code recs