@@ -166,7 +166,7 @@ public class OneBlockIslands implements DataObject {
         if (list.size() <= 1) {
             return null;
         }
-        String entry = list.remove(list.size() - 1);
+        String entry = list.removeLast();
         unlockedSet = null;
         int comma = entry.indexOf(',');
         return new int[] { Integer.parseInt(entry.substring(0, comma)),
@@ -323,8 +323,7 @@ public class OneBlockIslands implements DataObject {
      * (non-Javadoc)
      *
      * @see
-     * world.bentobox.bentobox.database.objects.DataObject#setUniqueId(java.lang.
-     * String)
+     * world.bentobox.bentobox.database.objects.DataObject#setUniqueId(java.lang.String)
      */
     @Override
     public void setUniqueId(String uniqueId) {
